--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,25 @@ body,
 #root,
 .app,
 .content {
+  flex: 1;
+
   height: 100%;
   width: 100%;
   font-family: "Source Sans Pro", sans-serif;
+}
+.content-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto; /* Allow the content to scroll if needed */
+  margin-bottom: 15px;
 }
 
 .app {
   display: flex;
   position: relative;
+  height: 100vh;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
